--- a/bin/gui/control.glade
+++ b/bin/gui/control.glade
@@ -6,6 +6,16 @@
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
+  <object class="GtkAdjustment" id="adjustment1">
+    <property name="upper">100</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
+  <object class="GtkAdjustment" id="adjustment2">
+    <property name="upper">100</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
   <object class="GtkListStore" id="camera-properties">
     <columns>
       <!-- column-name PropertyName -->
@@ -252,7 +262,7 @@
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Camera Control</property>
     <property name="default_width">1024</property>
-    <property name="default_height">768</property>
+    <property name="default_height">767</property>
     <signal name="delete-event" handler="on_delete_event" swapped="no"/>
     <child>
       <object class="GtkVBox" id="vbox1">
@@ -434,6 +444,8 @@
                 <property name="height_request">480</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="hadjustment">adjustment1</property>
+                <property name="vadjustment">adjustment2</property>
                 <property name="hscrollbar_policy">automatic</property>
                 <property name="vscrollbar_policy">automatic</property>
                 <child>
@@ -452,8 +464,8 @@
                 </child>
               </object>
               <packing>
-                <property name="resize">True</property>
-                <property name="shrink">True</property>
+                <property name="resize">False</property>
+                <property name="shrink">False</property>
               </packing>
             </child>
             <child>
