--- a/bin/gui/control.glade
+++ b/bin/gui/control.glade
@@ -230,6 +230,11 @@
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
+  <object class="GtkAdjustment" id="height_adjustment">
+    <property name="upper">100</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
   <object class="GtkAdjustment" id="max-bin-value-adjustment">
     <property name="upper">65535</property>
     <property name="value">256</property>
@@ -246,35 +251,10 @@
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
-  <object class="GtkListStore" id="zoom-values">
-    <columns>
-      <!-- column-name display -->
-      <column type="gchararray"/>
-      <!-- column-name factor -->
-      <column type="gdouble"/>
-    </columns>
-    <data>
-      <row>
-        <col id="0" translatable="yes">400 %</col>
-        <col id="1">4</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">200 %</col>
-        <col id="1">2</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">100 %</col>
-        <col id="1">1</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">50 %</col>
-        <col id="1">0.5</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">25 %</col>
-        <col id="1">0.25</col>
-      </row>
-    </data>
+  <object class="GtkAdjustment" id="width_adjustment">
+    <property name="upper">65535</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
   </object>
   <object class="GtkWindow" id="window">
     <property name="can_focus">False</property>
@@ -475,7 +455,7 @@
                       <object class="GtkEventBox" id="eventbox">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="events">GDK_POINTER_MOTION_MASK | GDK_STRUCTURE_MASK</property>
+                        <property name="events">GDK_POINTER_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_STRUCTURE_MASK</property>
                         <property name="resize_mode">queue</property>
                         <child>
                           <object class="GtkImage" id="image">
@@ -924,6 +904,9 @@
                             <property name="column_spacing">6</property>
                             <property name="row_spacing">6</property>
                             <child>
+                              <placeholder/>
+                            </child>
+                            <child>
                               <object class="GtkLabel" id="label21">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
@@ -1008,7 +991,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="xalign">0</property>
-                                    <property name="label" translatable="yes">x = 0.0</property>
+                                    <property name="label" translatable="yes">x = 0</property>
                                   </object>
                                   <packing>
                                     <property name="expand">True</property>
@@ -1021,7 +1004,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="xalign">0</property>
-                                    <property name="label" translatable="yes">y = 0.0</property>
+                                    <property name="label" translatable="yes">y = 0</property>
                                   </object>
                                   <packing>
                                     <property name="expand">True</property>
@@ -1054,9 +1037,6 @@
                                 <property name="x_options">GTK_FILL</property>
                                 <property name="y_options"></property>
                               </packing>
-                            </child>
-                            <child>
-                              <placeholder/>
                             </child>
                           </object>
                           <packing>
@@ -1168,7 +1148,94 @@
                           </packing>
                         </child>
                         <child>
-                          <placeholder/>
+                          <object class="GtkTable" id="stats-table1">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="border_width">12</property>
+                            <property name="n_columns">2</property>
+                            <property name="column_spacing">6</property>
+                            <property name="row_spacing">6</property>
+                            <child>
+                              <object class="GtkLabel" id="label1">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="xalign">0</property>
+                                <property name="label" translatable="yes">ROI:</property>
+                              </object>
+                              <packing>
+                                <property name="x_options">GTK_FILL</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkHBox" id="hbox7">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="spacing">6</property>
+                                <child>
+                                  <object class="GtkLabel" id="roix-label">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">False</property>
+                                    <property name="xalign">0</property>
+                                    <property name="label" translatable="yes">x = 0</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">True</property>
+                                    <property name="fill">True</property>
+                                    <property name="position">0</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkLabel" id="roiy-label">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">False</property>
+                                    <property name="xalign">0</property>
+                                    <property name="label" translatable="yes">y = 0</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">True</property>
+                                    <property name="fill">True</property>
+                                    <property name="position">1</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkLabel" id="roiw-label">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">False</property>
+                                    <property name="xalign">0</property>
+                                    <property name="label" translatable="yes">width = 0</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">True</property>
+                                    <property name="fill">True</property>
+                                    <property name="position">2</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkLabel" id="roih-label">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">False</property>
+                                    <property name="xalign">0</property>
+                                    <property name="label" translatable="yes">height = 0</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">True</property>
+                                    <property name="fill">True</property>
+                                    <property name="position">3</property>
+                                  </packing>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="left_attach">1</property>
+                                <property name="right_attach">2</property>
+                                <property name="y_options"></property>
+                              </packing>
+                            </child>
+                          </object>
+                          <packing>
+                            <property name="expand">True</property>
+                            <property name="fill">True</property>
+                            <property name="position">1</property>
+                          </packing>
                         </child>
                         <child>
                           <object class="GtkCheckButton" id="logarithm-checkbutton">
@@ -1253,5 +1320,45 @@
         </child>
       </object>
     </child>
+  </object>
+  <object class="GtkAdjustment" id="x_adjustment">
+    <property name="upper">65535</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
+  <object class="GtkAdjustment" id="y_adjustment">
+    <property name="upper">65535</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
+  <object class="GtkListStore" id="zoom-values">
+    <columns>
+      <!-- column-name display -->
+      <column type="gchararray"/>
+      <!-- column-name factor -->
+      <column type="gdouble"/>
+    </columns>
+    <data>
+      <row>
+        <col id="0" translatable="yes">400 %</col>
+        <col id="1">4</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">200 %</col>
+        <col id="1">2</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">100 %</col>
+        <col id="1">1</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">50 %</col>
+        <col id="1">0.5</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">25 %</col>
+        <col id="1">0.25</col>
+      </row>
+    </data>
   </object>
 </interface>
